--- a/1.1_facades.md
+++ b/1.1_facades.md
@@ -5,13 +5,13 @@ sortid: 1.1
 submenu: true
 ---
 
-__Комплекс по обследованию фасада производится в следующих случаях:__  
+### __Комплекс по обследованию фасада производится в следующих случаях:__  
  а) Необходимость выполнения регламентированных осмотров фасада.  
  б) Определение точных объемов предстоящего ремонта.  
  в) Необходимость экспертизы при обнаружении деформации, трещин, разрушения элементов фасада.  
  г) Необходимость проведения капитального, локального, текущего ремонта.  
 
-__Вид обследования:__  
+### __Вид обследования:__  
 1. Первоначальное обследование фасада, до проведения ремонтных или иных работ, решающая круг вопросов связанных с определением работ необходимых к выполнению. 
 2. Повторное Инспекционное обследование фасада, проводимая по тем же объектам и решающая вопросы с качеством и объёмом выполненных работ.  
 ###### отменяет действие align-left и align-right
