--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -7,13 +7,13 @@ submenu: true
 
 {% include el-slider.html  nimg = "5" %}
 
-` ` Исследования, проведенные нашими специалистами, позволят выявить дефекты кровли, причины протечек, фактическое состояние конструкций кровли, определить необходимый объем ремонтных работ, испытания материалов кровли (изоляции, утеплителя, несущих конструкций), и многое другое.
+#### Исследования, проведенные нашими специалистами, позволят выявить дефекты кровли, причины протечек, фактическое состояние конструкций кровли, определить необходимый объем ремонтных работ, испытания материалов кровли (изоляции, утеплителя, несущих конструкций), и многое другое.
 
 ###### отменяет действие align-left и align-right
 ### **1. Нахождение мест протечек мембранной кровли.**  
 ![](/img/0/1.2.1.jpg)   
 
-` ` Вашему вниманию предоставляем новейший метод нахождения протечек кровли - __[Электро-векторное картирование]({% link 7.1.2.0_evk.md %})__, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.    
+Вашему вниманию предоставляем новейший метод нахождения протечек кровли - __[Электро-векторное картирование]({% link 7.1.2.0_evk.md %})__, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.    
  Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места повреждений покрытия.     
  На сегодняшний день __ЭВК - единственный наиболее эффективный способ__ находить повреждения гидроизоляции, прежде чем вода начнет своё разрушительное воздействие.
 
@@ -37,39 +37,39 @@ submenu: true
 ### **3. Качество монтажа кровельных материалов.**  
 ![](/img/0/1.2.3.6.jpg){:class="uk-align-left uk-width-1-2"}  
 
-` ` Даже, на первый взгляд, незначительные неточности монтажа кровельных материалов могут в разы уменьшить эксплуатационные свойства как отдельных материалов, так и конструкции кровли в целом. Чтобы избежать протечки кровли, либо ее частичное или полное разрушение, в любое удобное для Вас время к Вам на объект выезжают специалисты в области кровельных работ для контроля качества выполненных работ.
+Даже, на первый взгляд, незначительные неточности монтажа кровельных материалов могут в разы уменьшить эксплуатационные свойства как отдельных материалов, так и конструкции кровли в целом. Чтобы избежать протечки кровли, либо ее частичное или полное разрушение, в любое удобное для Вас время к Вам на объект выезжают специалисты в области кровельных работ для контроля качества выполненных работ.
 
 ###### отменяет действие align-left и align-right
 ### **4. Определение мест утечки тепла.**  
 ![](/img/0/1.2.4.jpg){:class="uk-align-left uk-width-1-2"}     
 
-` ` Одним из важных свойств кровельных систем является сохранение тепла помещений дома. Для диагностики мест тепловых аномалий кровли (мест утечки тепла) мы используем телевизоры последнего поколения, способные уловить малейшие скачки темперы. По результатам обследования кровли тепловизером вы получаете термограмму, на которой ясно видны области потери тепла. Качественно утеплив кровлю, вы значительно уменьшите расход потребляемого тепла и сохраните бюджет.
+Одним из важных свойств кровельных систем является сохранение тепла помещений дома. Для диагностики мест тепловых аномалий кровли (мест утечки тепла) мы используем телевизоры последнего поколения, способные уловить малейшие скачки темперы. По результатам обследования кровли тепловизером вы получаете термограмму, на которой ясно видны области потери тепла. Качественно утеплив кровлю, вы значительно уменьшите расход потребляемого тепла и сохраните бюджет.
 
 ###### отменяет действие align-left и align-right
 ### **5. Опорные металлические конструкции.**  
 ![](/img/0/1.2.5.jpg)    
 Металлические конструкции, так же требуют особого внимания. Некачественно выполненные сварные швы могут значительно повлиять на несущую конструкцию как отдельных элементов, так и всей системы кровли.  
 
-` ` Для предотвращения коррозии металлические конструкции должны обрабатываться специальными составами, а правила пожарной безопасности обязывают наносить огнеупорные составы на поверхности несущих конструкций из металла. Контроль качества сварных швов, качество нанесение защитного и огнеупорного состава, контроль выполнения сварных работ.
+Для предотвращения коррозии металлические конструкции должны обрабатываться специальными составами, а правила пожарной безопасности обязывают наносить огнеупорные составы на поверхности несущих конструкций из металла. Контроль качества сварных швов, качество нанесение защитного и огнеупорного состава, контроль выполнения сварных работ.
 
 ###### отменяет действие align-left и align-right
 ### **6. Несущая способность кровли.**    
 
-` ` Определение несущей способности кровли производится путем комплексного обследования несущих конструкций кровли, определения их прочностных характеристик, конструктивных особенностей и сбора существующих нагрузок. 
+Определение несущей способности кровли производится путем комплексного обследования несущих конструкций кровли, определения их прочностных характеристик, конструктивных особенностей и сбора существующих нагрузок. 
 
 ###### отменяет действие align-left и align-right
 ### **7. Деревянная конструкция кровли.**
 ![](/img/0/1.2.7.jpg)    
 
-` ` Деревянная кровля одна из наиболее распространенных конструкций кровли требующая значительного внимания. Неправильная сушка древесины, избыточная влажность, отсутствие обработки, наличие плесени, грибка - всё это способно за короткое время привести материал в непригодность. Вызов специалиста поможет вам узнать фактическое качество древесины. Так же, при наличии любых видов дефектов и недостатков, эксперты специально для Вас разработают мероприятия для того, чтобы ваша кровля прослужила вам как можно дольше.
+Деревянная кровля одна из наиболее распространенных конструкций кровли требующая значительного внимания. Неправильная сушка древесины, избыточная влажность, отсутствие обработки, наличие плесени, грибка - всё это способно за короткое время привести материал в непригодность. Вызов специалиста поможет вам узнать фактическое качество древесины. Так же, при наличии любых видов дефектов и недостатков, эксперты специально для Вас разработают мероприятия для того, чтобы ваша кровля прослужила вам как можно дольше.
 
 ###### отменяет действие align-left и align-right
 ### **8. Инфракрасная термография.**    
 
-` ` Метод обнаружения скопления влаги под кровельным покрытием.   
- Метод основан на принципе более медленного изменения температуры материалов, насыщенных водой, по сравнению с сухими. В дневное время солнечное тепло нагревает поверхность и все, что находится под ними, включая влагу. После захода солнца и падения температуры воздуха в ночное время, поверхность начинает отдавать тепло и остывать. Участки более низкой теплоемкости – без воды – остывают быстрее, чем места скопления влаги, что четко идентифицируется тепловизионной съемкой.  
+Метод обнаружения скопления влаги под кровельным покрытием.     
+Метод основан на принципе более медленного изменения температуры материалов, насыщенных водой, по сравнению с сухими. В дневное время солнечное тепло нагревает поверхность и все, что находится под ними, включая влагу. После захода солнца и падения температуры воздуха в ночное время, поверхность начинает отдавать тепло и остывать. Участки более низкой теплоемкости – без воды – остывают быстрее, чем места скопления влаги, что четко идентифицируется тепловизионной съемкой.  
  
-` ` Во время продолжительной солнечной погоды без осадков, поверхность в утренние часы специально обильно поливается водой, чтобы та проникла через все дефекты и скопилась под поверхностью гидроизоляции. Тепловизором обследуется и снимается вся поверхность сплошным методом с последующей склейкой в панорамные ИК-изображения для четкой идентификации аномалий по месту. Найденные дефекты маркируются и снимаются крупным планом. Указанный метод позволяет с достаточной точностью определить границы зоны проникновения влаги в верхние слои кровельного "пирога", но не дает возможности указать точное место повреждения (протечки).
+Во время продолжительной солнечной погоды без осадков, поверхность в утренние часы специально обильно поливается водой, чтобы та проникла через все дефекты и скопилась под поверхностью гидроизоляции. Тепловизором обследуется и снимается вся поверхность сплошным методом с последующей склейкой в панорамные ИК-изображения для четкой идентификации аномалий по месту. Найденные дефекты маркируются и снимаются крупным планом. Указанный метод позволяет с достаточной точностью определить границы зоны проникновения влаги в верхние слои кровельного "пирога", но не дает возможности указать точное место повреждения (протечки).
 
 
 ### **Что вам даст обследование кровли.**
