--- a/2.0_access.md
+++ b/2.0_access.md
@@ -8,7 +8,7 @@ layout: category
 ---
 
 ### **Нужен доступ?**  
-##### Высота, стесненные условия, труднодоступные зоны все это не имеет значения. **Мы обеспечим Вам доступ!**
+#### Высота, стесненные условия, труднодоступные зоны все это не имеет значения. **Мы обеспечим Вам доступ!**
 ### ***Обеспечим доступ в любую труднодоступную зону специалистам для обследования:***  
 - кровля  
 - фасад  
@@ -23,12 +23,12 @@ layout: category
 ###### отменяет действие align-left и align-right
 ### **Инженерное сооружение.**
 
-Труднодоступное инженерное проектирование - это наша специальность.   
+***Труднодоступное инженерное проектирование - это наша специальность.***   
 - **Проводим проверку и обслуживания** систем безопасности высоты, а так-же разрабатываем решения для доступа, включая анкерные линии, дорожки, поручни и лестницы.  
 - **Конструирование:** дюльфер, анкерные системы для удовлетворения наиболее сложных или удаленных структур.   
 - **Разработаем систему**, которая превратит ваши худшие, труднодоступные зоны в доступные области. Это включает в себя установку лебедок и такелаж.  
 - **Обучим** Ваш персонал использованию новых систем безопасности.   
-*Системы доступа, которые мы проектируем, умны, безопасны и экономически эффективны.* 
+***Системы доступа, которые мы проектируем, умны, безопасны и экономически эффективны.*** 
 
 - Проведем инструктаж по технике безопасности, методам работы со спец снаряжением.
 - Обеспечим сопровождение Вашего сотрудника на всем протяжении маршрута. 
