--- a/2.2_.md
+++ b/2.2_.md
@@ -8,10 +8,10 @@ submenu: true
 
 ### **Что такое замкнутое пространство?**  
 Закрытое или частично закрытое пространство, которое находится под атмосферным давлением во время использования и не предназначается или первоначально не было спроектировано как место работы, и подвержено в любое время:  
-Воздействию атмосферы, содержащей потенциально чрезмерные уровни загрязнения;  
-Недостатку кислорода или его избыточному содержанию;  
-Может стать причиной поглощения;  
-Может иметь ограниченные средства для входа и выхода.
+- Воздействию атмосферы, содержащей потенциально чрезмерные уровни загрязнения;  
+- Недостатку кислорода или его избыточному содержанию;  
+- Может стать причиной поглощения;  
+- Может иметь ограниченные средства для входа и выхода.
 
 ###### отменяет действие align-left и align-right
 ### **Примеры замкнутых пространств:** 
@@ -20,20 +20,20 @@ submenu: true
 Стволы шахт и тоннели;  
 
 
-Работы связанных с ограниченными пространствами, можно разделить на три вида:  
+**Работы связанных с ограниченными пространствами, можно разделить на три вида:**  
 - Вход;  
 - Спуск;  
 - Спасательные работы.
 
 ### **Вход через точку доступа.**  
-` ` Любой вход в замкнутое пространство сопряжен с возникновением опасной атмосферой, поэтому перед выполнением любых работ, связанных с входом в замкнутое пространство, необходимо провести обязательный анализ атмосферы с помощью газоизмерительного оборудования.
+Любой вход в замкнутое пространство сопряжен с возникновением опасной атмосферой, поэтому перед выполнением любых работ, связанных с входом в замкнутое пространство, необходимо провести обязательный анализ атмосферы с помощью газоизмерительного оборудования.
 
 ### **Замкнутые пространства опасны.**  
 
-` ` Без должной подготовки и соответствующего оснащения запрещено проникать в подобные места. Зачастую работник подвергается опасности, даже просто поместив голову внутрь входного отверстия. Если ограниченное пространство содержит токсичный газ, работники, которые находятся рядом со входом, также подвергаются риску, так как токсичный газ может находиться под давлением из-за тепла внутри или при утечке. По этой причине концентрация токсичных газов вблизи входа в замкнутое пространство может быть достаточно высока.
+Без должной подготовки и соответствующего оснащения запрещено проникать в подобные места. Зачастую работник подвергается опасности, даже просто поместив голову внутрь входного отверстия. Если ограниченное пространство содержит токсичный газ, работники, которые находятся рядом со входом, также подвергаются риску, так как токсичный газ может находиться под давлением из-за тепла внутри или при утечке. По этой причине концентрация токсичных газов вблизи входа в замкнутое пространство может быть достаточно высока.
 
 ### **Опасное состояние атмосферы.** 
-` ` Атмосфера в замкнутом пространстве может быть опасной по нескольким причинам. Воздух может содержать слишком мало или слишком много кислорода, может быть токсичным или взрывоопасным. Атмосфера каждого замкнутого пространства по степени опасности должна быть классифицирована как высокая, средняя или низкая.
+Атмосфера в замкнутом пространстве может быть опасной по нескольким причинам. Воздух может содержать слишком мало или слишком много кислорода, может быть токсичным или взрывоопасным. Атмосфера каждого замкнутого пространства по степени опасности должна быть классифицирована как высокая, средняя или низкая.
 
 - Степень опасности: **Опасная атмосфера.**
 Атмосфера, которая может подвергнуть работника риску смерти, травмы или острой болезни или лишить работника возможности покинуть зону ограниченного пространства без посторонней помощи, если система вентиляции или респиратор не исправны (вышли из строя).   
