--- a/3.0_safety.md
+++ b/3.0_safety.md
@@ -13,7 +13,7 @@ layout: category
 ***Наша компания является дилерами компании HIGH SAFETY***
 
 
-` ` Анкерные устройства от компании **HIGH SAFETY** - производитель средств индивидуальной и коллективной защиты от падения с высоты **№1 в России.** 
+Анкерные устройства от компании **HIGH SAFETY** - производитель средств индивидуальной и коллективной защиты от падения с высоты **№1 в России.** 
 Вся продукция High Safety производится на территории России, соответствует требованиям Технического регламента Таможенного союза {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %}, <!--   bufer6.3.0.md  --> имеет сертификаты соответствия ЕАС.
 - гибкие и жесткие горизонтальные анкерные линии 
 - жесткие вертикальные анкерные линии 
