--- a/3.2_GORIZONT.md
+++ b/3.2_GORIZONT.md
@@ -16,7 +16,7 @@ submenu: true
 
 {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %} Сертификат соответствия   
 {% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %} России
-
+{% include el-contact-form.html icon="receiver" text="Заказать" %}
 ###### отменяет действие align-left и align-right
 ### **Преимущества системы**  
 ![](/img/sss/3.2.1.gif)
