--- a/3.3_MOST.md
+++ b/3.3_MOST.md
@@ -13,6 +13,7 @@ submenu: true
 
 {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %} Сертификат соответствия   
 {% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %}
+{% include el-contact-form.html icon="receiver" text="Заказать" %}
 ###### отменяет действие align-left и align-right
 
 ### **Преимущества системы**
