--- a/3.4_VERTIKAL.md
+++ b/3.4_VERTIKAL.md
@@ -9,6 +9,7 @@ submenu: true
 
 ### Наша компания является дилерами компании **HIGH SAFETY**
 ![](/img/toplogo/3.4.0.jpg){:class="uk-align-left uk-width-1-2"}
+{% include el-contact-form.html icon="receiver" text="Заказать" %}
 ###### отменяет действие align-left и align-right
 
 Вертикальная жесткая анкерная линия **VERTIKAL** обеспечивает непревзойденный уровень безопасности при подъеме/спуске по любым типам стационарных лестниц.
