--- a/6.0_contacts.md
+++ b/6.0_contacts.md
@@ -42,10 +42,10 @@ submenu: false
 -    Разработка систем, для безопасной работы в труднодоступных зонах.
 
 3.	Продажа услуги:     
-    Выполняем монтаж специализированных систем, а так же временные линии безопасности.  
-    Подготовка проекта - Наши специалисты в области безопасности могут обеспечить добавление в проект зданий, конструкций, систем безопасности и обеспечения доступа для ваших сотрудников, когда Вы заранее планируете возможности обслуживания и эксплуатации здания.  
-    Согласование проектной документации — необходимый этап на пути получения разрешения к началу строительных работ на объекте.  
--    Любая имеющаяся проектная документация подлежит согласованию, причем порядок согласования разных объектов в государственных структурах может иметь существенные различия. 
+-    Выполняем монтаж специализированных систем, а так же временные линии безопасности.  
+-    Подготовка проекта - Наши специалисты в области безопасности могут обеспечить добавление в проект зданий, конструкций, систем безопасности и обеспечения доступа для ваших сотрудников, когда Вы заранее планируете возможности обслуживания и эксплуатации здания.  
+-    Согласование проектной документации — необходимый этап на пути получения разрешения к началу строительных работ на объекте.  
+    *Любая имеющаяся проектная документация подлежит согласованию, причем порядок согласования разных объектов в государственных структурах может иметь существенные различия.* 
 
 Наши партнеры:
 
