--- a/6.0_contacts.md
+++ b/6.0_contacts.md
@@ -30,10 +30,10 @@ submenu: false
 
 Вид деятельности:
 1.	Инспекция промышленных объектов.  
-    Мы предоставляем данные для принятия верного решения.   
-    Опытная команда доберется до самых труднодоступных мест на вашем объекте и проведет профессиональное обследование на предмет: коррозии, износа, деформации, трещин, качества покрытий и.т.д. Вы получите важную, детализированную информацию, необходимую для планирования ремонтных или иных работ. Тем самым защитите свои активы и минимизируете свои траты.  
-    Отчеты инспекции лягут в основу тех задания и сметной документации!  
-    В отчете будут отражены какие работы необходимы, что позволяет получить точную оценку от соответствующих сделок; важным фактором, где доступ к ним затруднен.
+-    Мы предоставляем данные для принятия верного решения.   
+-    Опытная команда доберется до самых труднодоступных мест на вашем объекте и проведет профессиональное обследование на предмет: коррозии, износа, деформации, трещин, качества покрытий и.т.д. Вы получите важную, детализированную информацию, необходимую для планирования ремонтных или иных работ. Тем самым защитите свои активы и минимизируете свои траты.  
+-    Отчеты инспекции лягут в основу тех задания и сметной документации!  
+-    В отчете будут отражены какие работы необходимы, что позволяет получить точную оценку от соответствующих сделок; важным фактором, где доступ к ним затруднен.
 
 2.	Проекты.  
 -    Проектируем стационарные страховочные системы.
