--- a/1.0_survey.md
+++ b/1.0_survey.md
@@ -7,9 +7,9 @@ submenu: true
 layout: category
 ---
 
-### __Высотное обследование__ – форма контроля, получение необходимой информации на высоте и в труднодоступных местах. 
+#### __Высотное обследование__ – форма контроля, получение необходимой информации на высоте и в труднодоступных местах. 
 
-### __Обследование__ — Один из видов проверки качества строительной деятельности, базирующийся на инструментальном анализе и сопоставлении данных существующей нормативной, проектной документации.
+#### __Обследование__ — Один из видов проверки качества строительной деятельности, базирующийся на инструментальном анализе и сопоставлении данных существующей нормативной, проектной документации.
 
 ### Для чего нужна высотное обследование.
 Основная цель высотного обследования получения ответов на интересующие вопросы Заказчика.   
