--- a/2.0_access.md
+++ b/2.0_access.md
@@ -13,7 +13,7 @@ layout: category
 - кровля  
 - фасад  
 - замкнутого пространства  
-***ЗАКАЗАТЬ***
+{% include el-contact-form.html icon="receiver" text="Заказать обратный звонок" %}
 
 Мы являемся специалистами в области проектирования безопасных систем доступа в самые труднодоступные места.  
 Ликвидация рисков для жизни и здоровья Ваших сотрудников на высоте является первостепенной задачей.   
