--- a/6.0_contacts.md
+++ b/6.0_contacts.md
@@ -14,7 +14,16 @@ submenu: false
 {% endfor %}
 
 {% for s in site.data.var.socials %}
-    <span uk-icon="{{ s.name | downcase }}"></span>{{ s.name }} : {{ s.val }}<br/>
+    <span uk-icon="{{ s.name | downcase }}"></span>
+    {{ s.name }} :
+    {%- if s.link -%}
+        <a href="{{ s.link }}">
+    {%- endif -%}
+    {{ s.val }}
+    {%- if s.link -%}
+        </a>
+    {%- endif -%}
+    <br/>
 {% endfor %}
 
 <span uk-icon="mail"></span> Напишите нам: <a href="mailto:{{ site.data.var.email }}">{{ site.data.var.email }}</a><br/>
