--- a/6.0_contacts.md
+++ b/6.0_contacts.md
@@ -17,7 +17,7 @@ submenu: false
     <span uk-icon="{{ s.name | downcase }}"></span>
     {{ s.name }} :
     {%- if s.link -%}
-        <a href="{{ s.link }}">
+        <a href="{{ s.link | replace: '%s', s.val }}">
     {%- endif -%}
     {{ s.val }}
     {%- if s.link -%}
