--- a/6.0_contacts.md
+++ b/6.0_contacts.md
@@ -28,7 +28,7 @@ submenu: false
 
 <span uk-icon="mail"></span> Напишите нам: <a href="mailto:{{ site.data.var.email }}">{{ site.data.var.email }}</a><br/>
 
-Мы на портале поставщиков- Ссылка <br/>
+Мы на портале поставщиков-  <br/>
 Физ. адрес:  {{ site.data.var.address }} <br/>
 Почтовый адрес: {{ site.data.var.mailing }} <br/>
 {{ site.data.var.sro }} <br/>
