--- a/7.1.2.3_Buckleys.md
+++ b/7.1.2.3_Buckleys.md
@@ -6,22 +6,22 @@ submenu: false
 layout: buffer
 ---
 
-![](/img/evk/EVK.001.jpg)
-
+![](/img/evk/EVK.001.jpg){:class="uk-align-left uk-width-1-2"}
+###### отменяет действие align-left и align-right
 ## Мокрые Крыши Про
 **Детектор протечек Buckleys Wet Roof Pro’** был разработан, чтобы найдите протечки на плоских кровельных системах, которые включают диэлектрические мембранные накладки как однополые, асфальт, битум и жидкие применяемые на крышах.  
 **Детектор протечек Buckleys Wet Roof Pro’** использует проводящие свойства воды (от любого дождя или шланга), чтобы точно определить протечки.
 
-![](/img/evk/EVK.002.jpg)
-
+![](/img/evk/EVK.002.jpg){:class="uk-align-left uk-width-1-2"}
+###### отменяет действие align-left и align-right
 ` ` Комплект состоит из двух основных элементов: блока генератора и блока детектора. Блок генератора создает электрическое поле через поверхность крыши, через провод, границы который расположен вокруг периметра испытуемого участка и соединенный к положительному стержню на блоке генератора. Отрицательная клемма подключена к земле на структуре здания.  
 
 ` ` Утечки в мембране крыши позволяют воде проникать в структуру здания, создавая короткое замыкание. Блок детектора соединен с двумя ручными тестовыми зондами, которые удерживаются в контакте с поверхностью крыши.  
 
 ` ` **Способный испытывать до 400 m2 в день, блок детектора направляет оператора к точному положению протечки путем измерения разности напряжений между зондами.**
 
-![](/img/evk/EVK.003.jpg)
-
+![](/img/evk/EVK.003.jpg){:class="uk-align-left uk-width-1-2"}
+###### отменяет действие align-left и align-right
 **Особенности**
 * Тест до 400 м2 в день  
 * Точечные утечки, которые слишком малы, чтобы найти невооруженным глазом  
@@ -40,6 +40,6 @@ layout: buffer
 * Диапазон температур от +4°C до +40°C  
 
 
-![](/img/evk/EVK.004.jpg)  
-![](/img/evk/EVK.009.png)  
-![](/img/evk/EVK.005.jpg)
+![](/img/evk/EVK.004.jpg){:class="uk-align-left uk-width-1-3"}  
+![](/img/evk/EVK.009.png){:class="uk-align-left uk-width-1-3"}  
+![](/img/evk/EVK.005.jpg){:class="uk-align-left uk-width-1-3"}
