--- a/404.md
+++ b/404.md
@@ -6,4 +6,4 @@ layout: uni
 ---
 
 <h1 class="uk-heading-xlarge">404</h1>
-<h1 class="uk-heading-xlarge">Перейти на <a href="{% link index.md %}">главную страницу</a></h1>
+<h1 class="">Перейти на <a href="{% link index.md %}">главную страницу</a></h1>
