--- a/7.2_Instrument.md
+++ b/7.2_Instrument.md
@@ -1,1 +1,83 @@
-1
+---
+title: Инструменты
+cat: 7
+main: false
+submenu: false
+layout: buffer
+---
+
+### **Инструменты**
+#### **В своей работе мы используем профессиональный инструмент, который прошел поверку и имеет лицензию**
+
+#### **Детектор протечек [Buckleys Wet Roof Pro’]({% link 7.1.2.3_Buckleys.md %})**  
+Найдите протечки крыши в условиях влажной погоды
+
+![](/img/evk/EVK.001.jpg){:class="uk-align-left uk-width-1-3"}
+![](/img/evk/EVK.003.jpg){:class="uk-align-left uk-width-1-3"}
+###### отменяет действие align-left и align-right
+
+#### **Мокрые Крыши Про**
+**Детектор протечек Buckleys Wet Roof Pro’** был разработан, чтобы найдите протечки на плоских кровельных системах, которые включают диэлектрические мембранные накладки как однополые, асфальт, битум и жидкие применяемые на крышах.  
+ **Детектор протечек Buckleys Wet Roof Pro’** использует проводящие свойства воды (от любого дождя или шланга), чтобы точно определить протечки.
+
+
+
+#### **PST-100 искровой тестер**
+ 
+![](/img/Instrument/PST100.01.png){:class="uk-align-left uk-width-1-3"}
+![](/img/Instrument/PST100.02.jpg){:class="uk-align-left uk-width-1-3"}
+###### отменяет действие align-left и align-right
+
+**Применение:**
+
+•	Для оперативной проверки однородности сварных соединений пластиковых конструкций в химической промышленности и трубных системах;  
+•	Для проверки качества сварочного шва при экструзионной сварке полимерных геомембран.
+
+#### **МТ-2007 магнитный толщиномер покрытий**
+![](/img/Instrument/МТ2007.01.jpg){:class="uk-align-left uk-width-1-3"}
+![](/img/Instrument/МТ2007.02.jpg){:class="uk-align-left uk-width-1-3"}
+###### отменяет действие align-left и align-right
+
+Магнитный толщиномер покрытий МТ-2007 предназначен для измерения толщины лакокрасочных, гальванических, огнезащитных и любых других немагнитных токопроводящих и непроводящих покрытий на ферромагнитных (сталь, чугун и пр.) основаниях  
+
+•	Измерение толщины покрытия на магнитных основаниях в широком диапазоне от 2 до 30 000 мкм  
+•	Измерение толщины ржавчины на стали, в том числе и на внутренних стенках труб (при использовании специализированных преобразователей)  
+•	Измерение толщины гальванических (цинковых, хромовых, кадмиевых, серебряных и других) покрытий на магнитных основаниях (сталь и т.д.)  
+•	Проведение как локальных измерений (в конкретном месте), так и непрерывных измерений - режим сканирования, при этом оператор имеет возможность оценить распределение нанесения покрытия на металл непосредственно в каждой точке сканирования  
+•	Функция вычисления среднего арифметического значения и среднеквадратичного отклонения, при этом оператору достаточно провести измерение минимум в трех точках для определения равномерности нанесения покрытия  
+   
+#### **Тепловизор Testo 865**
+![](/img/Instrument/Testo865.01.png){:class="uk-align-left uk-width-1-3"}
+![](/img/Instrument/Testo865.02.png){:class="uk-align-left uk-width-1-3"}
+###### отменяет действие align-left и align-right
+
+Тепловизор testo 865 – профессиональный прибор, который ориентирован на решение самых важных задач для повседневной работы специалиста.  
+Область применение тепловизора Testo 865:  
+1) Диагностика дефектов ограждающих конструкций и обеспечение качества строительства   
+2) Мониторинг систем отопления  
+3) Помощь при превентивной диагностике  
+   Типичные задачи для тепловизора:  
+- Быстрая локализация горячих точек  
+- Выявление аномального нагрева
+     
+#### **Склерометр Easy Beton CONDTROL**
+![](/img/Instrument/EasyBeton.01.jpg){:class="uk-align-left uk-width-1-3"}
+![](/img/Instrument/EasyBeton.02.png){:class="uk-align-left uk-width-1-3"}
+###### отменяет действие align-left и align-right
+
+Измеритель прочности Beton Easy CONDTROL предназначен для неразрушающего контроля прочности и однородности бетона методом ударного импульса по ГОСТ 22690   
+
+Область применения прибора – определение прочности бетона, раствора, кирпича на предприятиях стройиндустрии и объектах строительства, а также при обследовании эксплуатируемых зданий и сооружений   
+Особенности и преимущества   
+- Компактный размер 
+- Отсутствие проводов и соединений благодаря электронике, встроенной в склерометр 
+- Уникальная элементная база, позволяющая работать зимой при температурах до -25°С 
+- Наличие коэффициента совпадения Кс для оперативного уточнения базовых градуировочных характеристик в соответствии с Приложением № 9 ГОСТ 22690
+   
+#### **Набор НТЦ Эксперт ВИК Поверенный**
+![](/img/Instrument/vik.01.jpg){:class="uk-align-left uk-width-1-3"}
+![](/img/Instrument/vik.02.jpg){:class="uk-align-left uk-width-1-3"}
+###### отменяет действие align-left и align-right
+
+Набор НТЦ Эксперт ВИК разработан для **профессионального контроля производственных объектов.** Значительно оптимизирован по функционалу и качеству измерительного инструмента. Набор комплектуется сертификатом о калибровке и флешкой, содержащей образцы техкарт, актов и журналов ВИК. 
+
