--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -99,5 +99,5 @@ __[Техническое заключение:]({% link 1.4_Tech_conclus.md %})
 
 **техническое заключение формируется на основании технического задания.**
 
-___В нашей деятельности мы используем только профессиональное оборудование и **[инструменты]({% link 7.2_Instrument.md %})**, имеющие поверки и необходимые сертификаты качества.___
+___В нашей деятельности мы используем только профессиональное оборудование и [инструменты]({% link 7.2_Instrument.md %}), имеющие поверки и необходимые сертификаты качества.___
 
