--- a/7.2_Instrument.md
+++ b/7.2_Instrument.md
@@ -6,8 +6,8 @@ submenu: false
 layout: buffer
 ---
 
-### **Инструменты**
 #### **В своей работе мы используем профессиональный инструмент, который прошел поверку и имеет лицензию**
+{: .uk-#### **В своей работе мы используем профессиональный инструмент, который прошел поверку и имеет лицензию**-center}
 
 #### **Детектор протечек [Buckleys Wet Roof Pro’]({% link 7.1.2.3_Buckleys.md %})**  
 Найдите протечки крыши в условиях влажной погоды
