--- a/7.2_Instrument.md
+++ b/7.2_Instrument.md
@@ -9,11 +9,13 @@ layout: buffer
 #### **В своей работе мы используем профессиональный инструмент, который прошел поверку и имеет лицензию**
 {: .uk-#### **В своей работе мы используем профессиональный инструмент, который прошел поверку и имеет лицензию**-center}
 
-#### **Детектор протечек [Buckleys Wet Roof Pro’]({% link 7.1.2.3_Buckleys.md %})**  
+{: .uk-### **Детектор протечек [Buckleys Wet Roof Pro’]({% link 7.1.2.3_Buckleys.md %})**-center}
+
 Найдите протечки крыши в условиях влажной погоды
 
-![](/img/evk/EVK.001.jpg){:class="uk-align-left uk-width-1-3"}
-![](/img/evk/EVK.003.jpg){:class="uk-align-left uk-width-1-3"}
+![](/img/Instrument/EVK.01.png){:class="uk-align-left uk-width-1-3"}
+![](/img/Instrument/EVK.02.jpg){:class="uk-align-left uk-width-1-3"}
+
 ###### отменяет действие align-left и align-right
 
 #### **Мокрые Крыши Про**
