--- a/7.2_Instrument.md
+++ b/7.2_Instrument.md
@@ -11,7 +11,7 @@ layout: buffer
 
 {: .uk-### **Детектор протечек [Buckleys Wet Roof Pro’]({% link 7.1.2.3_Buckleys.md %})**-center}
 
-Найдите протечки крыши в условиях влажной погоды
+Найдите протечки крыши в условиях влажной погоды{: .uk-text-center}
 
 ![](/img/Instrument/EVK.01.png){:class="uk-align-left uk-width-1-3"}
 ![](/img/Instrument/EVK.02.jpg){:class="uk-align-left uk-width-1-3"}
