--- a/7.2_Instrument.md
+++ b/7.2_Instrument.md
@@ -7,11 +7,12 @@ layout: buffer
 ---
 
 #### **В своей работе мы используем профессиональный инструмент, который прошел поверку и имеет лицензию**
-{: .uk-#### **В своей работе мы используем профессиональный инструмент, который прошел поверку и имеет лицензию**-center}
+{: .uk-text-center}
+### **Детектор протечек [Buckleys Wet Roof Pro’]({% link 7.1.2.3_Buckleys.md %})**
+{: .uk-text-center}
 
-{: .uk-### **Детектор протечек [Buckleys Wet Roof Pro’]({% link 7.1.2.3_Buckleys.md %})**-center}
-
-Найдите протечки крыши в условиях влажной погоды{: .uk-text-center}
+Найдите протечки крыши в условиях влажной погоды
+{: .uk-text-center}
 
 ![](/img/Instrument/EVK.01.png){:class="uk-align-left uk-width-1-3"}
 ![](/img/Instrument/EVK.02.jpg){:class="uk-align-left uk-width-1-3"}
