--- a/7.2_Instrument.md
+++ b/7.2_Instrument.md
@@ -25,7 +25,8 @@ layout: buffer
 
 
 
-#### **PST-100 искровой тестер**
+### **PST-100 искровой тестер**
+{: .uk-text-center}
  
 ![](/img/Instrument/PST100.01.png){:class="uk-align-left uk-width-1-3"}
 ![](/img/Instrument/PST100.02.jpg){:class="uk-align-left uk-width-1-3"}
@@ -36,7 +37,8 @@ layout: buffer
 •	Для оперативной проверки однородности сварных соединений пластиковых конструкций в химической промышленности и трубных системах;  
 •	Для проверки качества сварочного шва при экструзионной сварке полимерных геомембран.
 
-#### **МТ-2007 магнитный толщиномер покрытий**
+### **МТ-2007 магнитный толщиномер покрытий**
+{: .uk-text-center}
 ![](/img/Instrument/МТ2007.01.jpg){:class="uk-align-left uk-width-1-3"}
 ![](/img/Instrument/МТ2007.02.jpg){:class="uk-align-left uk-width-1-3"}
 ###### отменяет действие align-left и align-right
@@ -49,7 +51,8 @@ layout: buffer
 •	Проведение как локальных измерений (в конкретном месте), так и непрерывных измерений - режим сканирования, при этом оператор имеет возможность оценить распределение нанесения покрытия на металл непосредственно в каждой точке сканирования  
 •	Функция вычисления среднего арифметического значения и среднеквадратичного отклонения, при этом оператору достаточно провести измерение минимум в трех точках для определения равномерности нанесения покрытия  
    
-#### **Тепловизор Testo 865**
+### **Тепловизор Testo 865**
+{: .uk-text-center}
 ![](/img/Instrument/Testo865.01.png){:class="uk-align-left uk-width-1-3"}
 ![](/img/Instrument/Testo865.02.png){:class="uk-align-left uk-width-1-3"}
 ###### отменяет действие align-left и align-right
@@ -63,7 +66,8 @@ layout: buffer
 - Быстрая локализация горячих точек  
 - Выявление аномального нагрева
      
-#### **Склерометр Easy Beton CONDTROL**
+### **Склерометр Easy Beton CONDTROL**
+{: .uk-text-center}
 ![](/img/Instrument/EasyBeton.01.jpg){:class="uk-align-left uk-width-1-3"}
 ![](/img/Instrument/EasyBeton.02.png){:class="uk-align-left uk-width-1-3"}
 ###### отменяет действие align-left и align-right
@@ -77,7 +81,8 @@ layout: buffer
 - Уникальная элементная база, позволяющая работать зимой при температурах до -25°С 
 - Наличие коэффициента совпадения Кс для оперативного уточнения базовых градуировочных характеристик в соответствии с Приложением № 9 ГОСТ 22690
    
-#### **Набор НТЦ Эксперт ВИК Поверенный**
+### **Набор НТЦ Эксперт ВИК Поверенный**
+{: .uk-text-center}
 ![](/img/Instrument/vik.01.jpg){:class="uk-align-left uk-width-1-3"}
 ![](/img/Instrument/vik.02.jpg){:class="uk-align-left uk-width-1-3"}
 ###### отменяет действие align-left и align-right
