--- a/7.1.2.3_Buckleys.md
+++ b/7.1.2.3_Buckleys.md
@@ -43,3 +43,4 @@ layout: buffer
 ![](/img/evk/EVK.004.jpg){:class="uk-align-left uk-width-1-3"}  
 ![](/img/evk/EVK.009.png){:class="uk-align-left uk-width-1-3"}  
 ![](/img/evk/EVK.005.jpg){:class="uk-align-left uk-width-1-3"}
+###### отменяет действие align-left и align-right
