--- a/7.1.2.0_evk.md
+++ b/7.1.2.0_evk.md
@@ -6,13 +6,14 @@ submenu: false
 layout: buffer
 ---
 
-
 Вашему вниманию предоставляем новейший метод нахождения протечек кровли - **Электро-векторное картирование**, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.
 
 Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места протечек покрытия. На сегодняшний день ЭВК - единственный способность находить повреждения гидроизоляции, прежде чем вода в больших количествах накопится под кровельным покрытием.
 
 ### Тестирование Мембраны Плоской Крыши
-{% include el-figure.html url="evk/EVK.006.jpg" title="Испытания Плоских Кровельных Материалов" %}
+![](/img/evk/EVK.006.jpg){:class="uk-align-left uk-width-1-2"}
+###### отменяет действие align-left и align-right 
+#### Испытания Плоских Кровельных Материалов
 
 *Детектор протечек Buckleys Wet Roof Pro’ может определить и обнаружить местонахождение утечки внутри плоской крыши.*
 
@@ -22,29 +23,32 @@ layout: buffer
 
 В настоящее время подавляющее большинство плоских крыш построено из электропроводящих материалов, таких как сталь или бетон, и многие из них имеют фольгированный изоляционный слой непосредственно под поверхностной мембраны. **Детектор протечек Buckleys Wet Roof Pro’** использует проводящие свойства этих материалов, для того чтобы обнаружить местонахождение протечки путем пропускания тока через дефекты к Земле.
 
-{% include el-figure.html url="buffer/7.1.2.0_fig2.png" title="Типичная однослойная плоская конструкция крыши" %}
-
+### Типичная однослойная плоская конструкция крыши
+![](/img/evk/EVK.007.jpg){:class="uk-align-left uk-width-1-2"}
+###### отменяет действие align-left и align-right
 *Детектор протечек Buckleys Wet Roof Pro’: обнаруживает утечки во влажных условиях.*
 
 ### Детектор протечек Buckleys Wet Roof Pro’
-
-{% include el-figure.html url="buffer/7.1.2.0_fig3.png" title="Найдите протечки крыши в условиях влажной погоды" %}
+![](/img/evk/EVK.001.png){:class="uk-align-left uk-width-1-2"}
+Найдите протечки крыши в условиях влажной погоды
+###### отменяет действие align-left и align-right
 
 ### Мокрые Крыши Про
 **Детектор протечек Buckleys Wet Roof Pro’** был разработан, чтобы найдите протечки на плоских кровельных системах, которые включают диэлектрические мембранные накладки как однополые, асфальт, битум и жидкие применяемые на крышах.
 
 **Детектор протечек Buckleys Wet Roof Pro’** использует проводящие свойства воды (от любого дождя или шланга), чтобы точно определить протечки.
 
-{% include el-figure.html url="buffer/7.1.2.0_fig4.png" title="" %}
+![](/img/evk/EVK.002.jpg){:class="uk-align-left uk-width-1-2"}
+###### отменяет действие align-left и align-right
 
 Комплект состоит из двух основных элементов: блока генератора и блока детектора. Блок генератора создает электрическое поле через поверхность крыши, через провод, границы который расположен вокруг периметра испытуемого участка и соединенный к положительному стержню на блоке генератора. Отрицательная клемма подключена к земле на структуре здания.
 Утечки в мембране крыши позволяют воде проникать в структуру здания, создавая короткое замыкание. Блок детектора соединен с двумя ручными тестовыми зондами, которые удерживаются в контакте с поверхностью крыши.
 
 **Способный испытывать до 400 m2 в день, блок детектора направляет оператора к точному положению протечки путем измерения разности напряжений между зондами.**
 
-{% include el-figure.html url="buffer/7.1.2.0_fig5.png" title="" %}
+![](/img/evk/EVK.003.jpg){:class="uk-align-left uk-width-1-2"}
 
-Особенности:
+**Особенности:**
 * Тест до 400 м2 в день
 * Точечные утечки, которые слишком малы, чтобы найти невооруженным глазом
 * Направляет оператора к дефекту кровли
@@ -52,8 +56,8 @@ layout: buffer
 * Тест на протечки круглый год
 * Способный испытывать любую толщину мембраны
 * Дискретная звуковая сигнализация
-
-Технические характеристики:
+###### отменяет действие align-left и align-right
+**Технические характеристики:**
 * Напряжение тока импульс выхода: DC 32V
 * Выходная мощность: <10 Вт
 * Максимальная относительная влажность: 80% без конденсации
