--- a/7.1.2.0_evk.md
+++ b/7.1.2.0_evk.md
@@ -29,7 +29,7 @@ layout: buffer
 *Детектор протечек Buckleys Wet Roof Pro’: обнаруживает утечки во влажных условиях.*
 
 ### Детектор протечек Buckleys Wet Roof Pro’
-![](/img/evk/EVK.001.png){:class="uk-align-left uk-width-1-2"}
+![](/img/evk/EVK.001.jpg){:class="uk-align-left uk-width-1-2"}
 Найдите протечки крыши в условиях влажной погоды
 ###### отменяет действие align-left и align-right
 
@@ -39,11 +39,10 @@ layout: buffer
 **Детектор протечек Buckleys Wet Roof Pro’** использует проводящие свойства воды (от любого дождя или шланга), чтобы точно определить протечки.
 
 ![](/img/evk/EVK.002.jpg){:class="uk-align-left uk-width-1-2"}
-###### отменяет действие align-left и align-right
 
 Комплект состоит из двух основных элементов: блока генератора и блока детектора. Блок генератора создает электрическое поле через поверхность крыши, через провод, границы который расположен вокруг периметра испытуемого участка и соединенный к положительному стержню на блоке генератора. Отрицательная клемма подключена к земле на структуре здания.
 Утечки в мембране крыши позволяют воде проникать в структуру здания, создавая короткое замыкание. Блок детектора соединен с двумя ручными тестовыми зондами, которые удерживаются в контакте с поверхностью крыши.
-
+###### отменяет действие align-left и align-right
 **Способный испытывать до 400 m2 в день, блок детектора направляет оператора к точному положению протечки путем измерения разности напряжений между зондами.**
 
 ![](/img/evk/EVK.003.jpg){:class="uk-align-left uk-width-1-2"}
