--- a/7.1.2.0_evk.md
+++ b/7.1.2.0_evk.md
@@ -28,7 +28,7 @@ layout: buffer
 ###### отменяет действие align-left и align-right
 *Детектор протечек Buckleys Wet Roof Pro’: обнаруживает утечки во влажных условиях.*
 
-### Детектор протечек Buckleys Wet Roof Pro’
+### **Детектор протечек [Buckleys Wet Roof Pro’]({% link 7.1.2.3_Buckleys.md %})**
 ![](/img/evk/EVK.001.jpg){:class="uk-align-left uk-width-1-2"}
 Найдите протечки крыши в условиях влажной погоды
 ###### отменяет действие align-left и align-right
@@ -63,5 +63,17 @@ layout: buffer
 * Рабочая высота: до 2000 м
 * Диапазон температур от +4°C до +40°C
 
+### **Завершающий этап проверки [(Карта дефектов на кровле)]({% link 7.1.2.2_final_step.md %})**
 
-
+1)	Этапы работы. 
+2)	Результаты обследования
+3)	Схема расположения выявленных дефектов кровли (Карта дефектов на кровле)
+4)	Описание найденных нарушений, дефектная ведомость
+5)	Фотофиксация состояния кровли и найденных нарушений
+6)	Рекомендации.
+#### Карта дефектов на кровле:
+![](/img/evk/KDK.001.png){:class="uk-align-left uk-width-1-2"}
+![](/img/evk/KDK.002.png){:class="uk-align-left uk-width-1-2"}
+![](/img/evk/KDK.003.png){:class="uk-align-left uk-width-1-2"}
+![](/img/evk/KDK.004.png){:class="uk-align-left uk-width-1-2"}
+###### отменяет действие align-left и align-right
