--- a/7.1.2.0_evk.md
+++ b/7.1.2.0_evk.md
@@ -65,12 +65,12 @@ layout: buffer
 
 ### **Завершающий этап проверки [(Карта дефектов на кровле)]({% link 7.1.2.2_final_step.md %})**
 
-1)	Этапы работы. 
-2)	Результаты обследования
-3)	Схема расположения выявленных дефектов кровли (Карта дефектов на кровле)
-4)	Описание найденных нарушений, дефектная ведомость
-5)	Фотофиксация состояния кровли и найденных нарушений
-6)	Рекомендации.
+1)	Этапы работы     
+2)	Результаты обследования  
+3)	Схема расположения выявленных дефектов кровли (Карта дефектов на кровле)  
+4)	Описание найденных нарушений, дефектная ведомость  
+5)	Фотофиксация состояния кровли и найденных нарушений  
+6)	Рекомендации  
 #### Карта дефектов на кровле:
 ![](/img/evk/KDK.001.png){:class="uk-align-left uk-width-1-2"}
 ![](/img/evk/KDK.002.png){:class="uk-align-left uk-width-1-2"}
