--- a/2.0_access.md
+++ b/2.0_access.md
@@ -5,6 +5,8 @@ main: true
 sortid: 2.0
 submenu: true
 layout: category
+slug: {{ page.title | slugify }}
+permalink: "/:slug/"
 ---
 
 ### **Нужен доступ?**  
