--- a/6.0_contacts.md
+++ b/6.0_contacts.md
@@ -10,7 +10,8 @@ submenu: false
 <address>
 <span uk-icon="receiver"></span> Наши телефоны:
 {% for p in site.data.var.phones %}
-    <a href="tel:{{ p }}">{{ p }}</a><br/>
+    <a href="tel:{{ p }}">{{ p }}</a>
+    {%- unless forloop.last -%},&#32;{%- endunless -%}
 {% endfor %}
 
 {% for s in site.data.var.socials %}
@@ -26,18 +27,22 @@ submenu: false
     <br/>
 {% endfor %}
 
-<span uk-icon="mail"></span> Напишите нам: <a href="mailto:{{ site.data.var.email }}">{{ site.data.var.email }}</a><br/>
+<span uk-icon="commenting"></span> Напишите нам: <a href="mailto:{{ site.data.var.email }}">{{ site.data.var.email }}</a><br/>
 
-Мы на портале поставщиков-  <br/>
-Физ. адрес:  {{ site.data.var.address }} <br/>
-Почтовый адрес: {{ site.data.var.mailing }} <br/>
-{{ site.data.var.sro }} <br/>
 
-Поделиться в соц. сетях
+<span uk-icon="location"></span>Физ. адрес:  {{ site.data.var.address }} <br/>
+<span uk-icon="mail"></span>Почтовый адрес: {{ site.data.var.mailing }} <br/>
+<span uk-icon="info"></span> {{ site.data.var.sro }} <br/>
+
+<span uk-icon="social"></span>Поделиться в соц. сетях: <br/>
+<span uk-icon="link"></span>Мы на портале поставщиков: <br/>
 </address>
+
+{% include i-sect-end-start.html sectclass="uk-section-muted" %}
+
 {% include about.md %}
 
-Вид деятельности:
+### Вид деятельности:
 1.	Инспекция промышленных объектов.  
 -    Мы предоставляем данные для принятия верного решения.   
 -    Опытная команда доберется до самых труднодоступных мест на вашем объекте и проведет профессиональное обследование на предмет: коррозии, износа, деформации, трещин, качества покрытий и.т.д. Вы получите важную, детализированную информацию, необходимую для планирования ремонтных или иных работ. Тем самым защитите свои активы и минимизируете свои траты.  
