--- a/6.0_contacts.md
+++ b/6.0_contacts.md
@@ -12,7 +12,7 @@ submenu: false
 {% for p in site.data.var.phones %}
     <a href="tel:{{ p }}">{{ p }}</a>
     {%- unless forloop.last -%},&#32;{%- endunless -%}
-{% endfor %}
+{% endfor %}</br/>
 
 {% for s in site.data.var.socials %}
     <span uk-icon="{{ s.name | downcase }}"></span>
@@ -41,6 +41,8 @@ submenu: false
 {% include i-sect-end-start.html sectclass="uk-section-muted" %}
 
 {% include about.md %}
+
+{% include i-sect-end-start.html %}
 
 ### Вид деятельности:
 1.	Инспекция промышленных объектов.  
