--- a/2.0_access.md
+++ b/2.0_access.md
@@ -6,7 +6,7 @@ sortid: 2.0
 submenu: true
 layout: category
 slug: {{ page.title | slugify }}
-permalink: "/:slug/"
+permalink: /:slug/
 ---
 
 ### **Нужен доступ?**  
