--- a/2.0_access.md
+++ b/2.0_access.md
@@ -5,7 +5,7 @@ main: true
 sortid: 2.0
 submenu: true
 layout: category
-slug: {{ page.title | slugify }}
+permalink: {{ page.title | slugify }}
 ---
 
 ### **Нужен доступ?**  
