--- a/2.0_access.md
+++ b/2.0_access.md
@@ -5,7 +5,7 @@ main: true
 sortid: 2.0
 submenu: true
 layout: category
-permalink: /{{ page.title | slugify }}
+permalink: /обеспечение-доступа
 ---
 
 ### **Нужен доступ?**  
