--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -3,6 +3,7 @@ title: Диагностика кровли
 cat: 1
 sortid: 1.2
 submenu: true
+permalink: /диагностика-кровли
 ---
 
 {% include el-slider.html  nimg = "5" %}
