--- a/1.3_.md
+++ b/1.3_.md
@@ -3,6 +3,7 @@ title: Обследования в труднодоступных местах
 cat: 1
 sortid: 1.3
 submenu: true
+permalink: /обследования-в-труднодоступных-местах
 ---
 
 {% include el-slider.html  nimg = "5" %} 
