--- a/1.5_nondestruct_lab.md
+++ b/1.5_nondestruct_lab.md
@@ -3,6 +3,7 @@ title: Неразрушающая лаборатория
 cat: 1
 sortid: 1.5
 submenu: true
+permalink: /неразрушающая-лаборатория
 ---
 
 ### **1. Визуальный неразрушающий контроль.**
