--- a/2.2_.md
+++ b/2.2_.md
@@ -3,6 +3,7 @@ title: Замкнутое пространство
 cat: 2
 sortid: 2.2
 submenu: true
+permalink: /замкнутое-пространство
 ---
 {% include el-slider.html  nimg = "5" %}
 
