--- a/3.1_GALEREYA.md
+++ b/3.1_GALEREYA.md
@@ -3,6 +3,7 @@ title: Анкерная линия GALEREYA
 cat: 3
 sortid: 3.1
 submenu: true
+permalink: /анкерная-линия-GALEREYA
 ---
 
 <div style="clear:both"></div>
