--- a/3.2_GORIZONT.md
+++ b/3.2_GORIZONT.md
@@ -3,6 +3,7 @@ title: Анкерная линия GORIZONT
 cat: 3
 sortid: 3.2
 submenu: true
+permalink: /анкерная-линия-GORIZONT
 ---
 
 <div style="clear:both"></div>
