--- a/3.3_MOST.md
+++ b/3.3_MOST.md
@@ -3,6 +3,7 @@ title: Анкерная линия MOST
 cat: 3
 sortid: 3.3
 submenu: true
+permalink: /анкерная-линия-MOST
 ---
 {% include el-slider.html  nimg = "3" %} 
 
