--- a/3.4_VERTIKAL.md
+++ b/3.4_VERTIKAL.md
@@ -3,6 +3,7 @@ title: Анкерная линия VERTIKAL
 cat: 3
 sortid: 3.4
 submenu: true
+permalink: /анкерная-линия-VERTIKAL
 ---
 
 {% include el-slider.html  nimg = "3" %} 
