--- a/3.5_PEREPRAVA.md
+++ b/3.5_PEREPRAVA.md
@@ -3,6 +3,7 @@ title: Анкерная линия PEREPRAVA
 cat: 3
 sortid: 3.5
 submenu: true
+permalink: /анкерная-линия-PEREPRAVA
 ---
 
 {% include el-slider.html  nimg = "3" %} 
