--- a/3.6_anchor_posts.md
+++ b/3.6_anchor_posts.md
@@ -3,6 +3,7 @@ title: Анкерные столбы
 cat: 3
 sortid: 3.6
 submenu: true
+permalink: /анкерные-столбы
 ---
 
 {% include el-slider.html  nimg = "3" %} 
