--- a/7.1.2.0_evk.md
+++ b/7.1.2.0_evk.md
@@ -4,6 +4,7 @@ cat: 7
 main: false
 submenu: false
 layout: buffer
+permalink: /электро-векторное-картирование
 ---
 
 Вашему вниманию предоставляем новейший метод нахождения протечек кровли - **Электро-векторное картирование**, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.
