--- a/7.1.2.3_Buckleys.md
+++ b/7.1.2.3_Buckleys.md
@@ -4,6 +4,7 @@ cat: 7
 main: false
 submenu: false
 layout: buffer
+permalink: /детектор-протечек-Buckleys-Wet-Roof-Pro
 ---
 
 ![](/img/evk/EVK.001.jpg){:class="uk-align-left uk-width-1-2"}
