--- a/7.2_Instrument.md
+++ b/7.2_Instrument.md
@@ -4,6 +4,7 @@ cat: 7
 main: false
 submenu: false
 layout: buffer
+permalink: /инструменты
 ---
 
 #### **В своей работе мы используем профессиональный инструмент, который прошел поверку и имеет лицензию**
