--- a/1.4_Tech_conclus.md
+++ b/1.4_Tech_conclus.md
@@ -3,6 +3,7 @@ title: Техническое заключение
 cat: 1
 sortid: 1.4
 submenu: true
+permalink: /техническое-заключение
 ---
 
 Заключения, представляет собой комплекс работ по выявлению критических замечаний, достоверности указанной информации, представленных в исследовательской части, а также написания заключения и проверки полноты его содержания согласно требованиям.
