--- a/6.0_contacts.md
+++ b/6.0_contacts.md
@@ -4,18 +4,19 @@ cat: 6
 main: true
 sortid: 6.0
 submenu: false
+permalink: /contacts
 ---
 
 Позвоните нам сейчас, и наши специалисты помогут Вам.
 <address>
-<span uk-icon="receiver"></span> Наши телефоны:
+<span uk-icon="receiver" class="uk-text-primary"></span> Наши телефоны:
 {% for p in site.data.var.phones %}
     <a href="tel:{{ p }}">{{ p }}</a>
     {%- unless forloop.last -%},&#32;{%- endunless -%}
 {% endfor %}<br/>
 
 {% for s in site.data.var.socials %}
-    <span uk-icon="{{ s.name | downcase }}"></span>
+    <span uk-icon="{{ s.name | downcase }}" class="uk-text-primary"></span>
     {{ s.name }} :
     {%- if s.link -%}
         <a href="{{ s.link }}">
@@ -27,15 +28,15 @@ submenu: false
     <br/>
 {% endfor %}
 
-<span uk-icon="commenting"></span> Напишите нам: <a href="mailto:{{ site.data.var.email }}">{{ site.data.var.email }}</a><br/>
+<span uk-icon="commenting" class="uk-text-primary"></span> Напишите нам: <a href="mailto:{{ site.data.var.email }}">{{ site.data.var.email }}</a><br/>
 
 
-<span uk-icon="location"></span>Физ. адрес:  {{ site.data.var.address }} <br/>
-<span uk-icon="mail"></span>Почтовый адрес: {{ site.data.var.mailing }} <br/>
-<span uk-icon="info"></span> {{ site.data.var.sro }} <br/>
+<span uk-icon="location" class="uk-text-primary"></span>Физ. адрес:  {{ site.data.var.address }} <br/>
+<span uk-icon="mail" class="uk-text-primary"></span>Почтовый адрес: {{ site.data.var.mailing }} <br/>
+<span uk-icon="info" class="uk-text-primary"></span> {{ site.data.var.sro }} <br/>
 
-<span uk-icon="social"></span>Поделиться в соц. сетях: <br/>
-<span uk-icon="link"></span>Мы на портале поставщиков: <br/>
+<span uk-icon="social" class="uk-text-primary"></span>Поделиться в соц. сетях: <br/>
+<span uk-icon="link" class="uk-text-primary"></span>Мы на портале поставщиков: <br/>
 </address>
 
 {% include i-sect-end-start.html sectclass="uk-section-muted" %}
