--- a/6.0_contacts.md
+++ b/6.0_contacts.md
@@ -15,9 +15,11 @@ permalink: /contacts
     {%- unless forloop.last -%},&#32;{%- endunless -%}
 {% endfor %}<br/>
 
-{% for s in site.data.var.socials %}
-    <span uk-icon="{{ s.name | downcase }}" class="uk-text-primary"></span>
-    {{ s.name }} :
+{% for s in site.data.var.contacts %}
+    {%- if s.icon -%}
+        <span uk-icon="{{ s.icon | downcase }}" class="uk-text-primary"></span>
+    {%- endif -%}    
+    {{ s.label }} :
     {%- if s.link -%}
         <a href="{{ s.link }}">
     {%- endif -%}
@@ -28,6 +30,7 @@ permalink: /contacts
     <br/>
 {% endfor %}
 
+{% comment %}
 <span uk-icon="commenting" class="uk-text-primary"></span> Напишите нам: <a href="mailto:{{ site.data.var.email }}">{{ site.data.var.email }}</a><br/>
 
 
@@ -37,6 +40,7 @@ permalink: /contacts
 
 <span uk-icon="social" class="uk-text-primary"></span>Поделиться в соц. сетях: <br/>
 <span uk-icon="link" class="uk-text-primary"></span>Мы на портале поставщиков: <br/>
+{% endcomment %}
 </address>
 
 {% include i-sect-end-start.html sectclass="uk-section-muted" %}
