--- a/6.0_contacts.md
+++ b/6.0_contacts.md
@@ -17,7 +17,7 @@ permalink: /contacts
 
 {% for s in site.data.var.contacts %}
     {%- if s.icon -%}
-        <span uk-icon="{{ s.icon | downcase }}" class="uk-text-primary"></span>
+        <span uk-icon="{{ s.icon }}" class="uk-text-primary"></span>
     {%- endif -%}    
     {{ s.label }} :
     {%- if s.link -%}
