--- a/6.0_contacts.md
+++ b/6.0_contacts.md
@@ -16,15 +16,15 @@ permalink: /contacts
 {% endfor %}<br/>
 
 {% for s in site.data.var.contacts %}
-    {%- if s.icon -%}
-        <span uk-icon="{{ s.icon }}" class="uk-text-primary"></span>
+    {%- if s[1].icon -%}
+        <span uk-icon="{{ s[1].icon }}" class="uk-text-primary"></span>
     {%- endif -%}    
-    {{ s.label }} :
-    {%- if s.link -%}
-        <a href="{{ s.link }}">
+    {{ s[1].label }} :
+    {%- if s[1].link -%}
+        <a href="{{ s[1].link }}">
     {%- endif -%}
-    {{ s.val }}
-    {%- if s.link -%}
+    {{ s[1].val }}
+    {%- if s[1].link -%}
         </a>
     {%- endif -%}
     <br/>
