--- a/6.0_contacts.md
+++ b/6.0_contacts.md
@@ -17,11 +17,11 @@ permalink: /contacts
 
 {% for s in site.data.var.contacts %}
     {%- if s[1].icon -%}
-        <span uk-icon="{{ s[1].icon }}" class="uk-text-primary"></span>
+        <span uk-icon="{{ s[1].icon }}" class="uk-text-primary"></span>&nbsp;
     {%- endif -%}    
-    {{ s[1].label }} :
+    {{ s[1].label }}:&nbsp;
     {%- if s[1].link -%}
-        <a href="{{ s[1].link }}">
+        <a href="{{ s[1].link }}" target="_blank">
     {%- endif -%}
     {{ s[1].val }}
     {%- if s[1].link -%}
